--- a/login_sign_up/style.css
+++ b/login_sign_up/style.css
@@ -14,6 +14,7 @@ header{
     justify-content: space-between;
     align-items: center;
 }
+
 .logo{
     position: relative;
     color: rgb(10, 12, 133);
@@ -29,7 +30,7 @@ header{
     margin-left: 20px;
 }
 
-.navigation > button{
+.navigation .opbtn{
     width: 5em;
     height: 2.2em;
     font-size: 1.1em;
@@ -42,7 +43,7 @@ header{
     transition: 0.5s;
 }
 
-.navigation > button:hover{
+.navigation .opbtn:hover{
     background-color: rgb(10, 12, 133);
     color: white;
 }
@@ -173,9 +174,9 @@ color: blue;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    
 
-    font-size: 1.5em;
+    font-size: 1em;
     border-radius: 20px;
     padding: 40px;
     background-color: rgba(255, 255, 255, 0.897);
@@ -198,8 +199,35 @@ color: blue;
     color: white;
 }
 
-img{
-    position: relative;
-    width: 60%;
-    height: 60%;
+.profile{
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
+    border-radius: 50px;
+    color: transparent;
+    border: 2px solid rgb(10, 12, 133);;
+    background-image: url("loggedIn.png");
+    background-size: cover;
+    transition: .5s;
 }
+
+.profile:hover{
+    background-color:rgba(10, 12, 133, 0.747);
+}
+
+
+.menu{
+    display: grid;
+    grid-template-columns: repeat(3,200px);
+    grid-template-rows: repeat(3,200px);
+    grid-gap: 10px;
+    align-items:;
+    justify-items:;
+}
+
+.menu > div{
+
+    background-color: blueviolet;
+}
+
+
